set container div width to max-content to fix img stretch

--- a/stylesheets/gallery.css
+++ b/stylesheets/gallery.css
@@ -19,7 +19,6 @@
 }
 .gallery-img {
     flex: none;
-    align-self: center;
     width: 100%;
     height: 100%;
 }
@@ -34,6 +33,7 @@
     background-color: white;
     padding: 10px;
     border-radius: 10px;
+    max-width: max-content;
 }
 .portrait-div {
     width: auto;
